--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -44,18 +44,16 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+    </dependency>
+
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.5.2</version>
 			<type>pom</type>
 		</dependency>
-
-		<!--<dependency>-->
-			<!--<groupId>ch.qos.logback</groupId>-->
-			<!--<artifactId>logback-classic</artifactId>-->
-			<!--<version>1.2.3</version>-->
-			<!--<scope>test</scope>-->
-		<!--</dependency>-->
 
 		<dependency>
 			<groupId>junit</groupId>
