Add updated frontend part (#23)
* Add updated frontend part

* fixed eslint warnings

* add .eslintrc file

* add .stylelintrc.json file

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,4 @@
 {
-  "watch": {
-    "stylelint-dev": {
-      "patterns": [
-        "/src/**/*.scss"
-      ],
-      "extensions": "scss"
-    }
-  },
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -14,16 +6,18 @@
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.4",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && copy /Y build ../src/src/main/resources/static",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "stylelint-dev": "stylelint 'src/**/*.scss' --cache --cache-location './.stylelintcache'; exit 0",
-    "stylelint-build": "stylelint 'src/**/*.scss'",
-    "watch-styles-sass": "npm-watch"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +27,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:9000/"
 }
