--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 dist: trusty
- language: java
- jdk:
+sudo: required
+language: java
+jdk:
    - oraclejdk8
- cache:
-   directories:
-     - $HOME/.m2
- script:
-    - mvn clean test
+cache:
+  directories:
+    - $HOME/.m2
+script:
+  - mvn clean test
