--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,40 @@
 {
+  "watch": {
+    "stylelint-dev": {
+      "patterns": [
+        "/src/**/*.scss"
+      ],
+      "extensions": "scss"
+    }
+  },
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "node-sass": "^4.9.3",
+    "npm-run-all": "^4.1.3",
+    "npm-watch": "^0.3.0",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-dom": "^16.5.2",
+    "react-scripts": "2.0.4",
+    "stylelint": "^8.2.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-order": "^0.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm-run-all -p stylelint-dev start-js",
+    "start-js": "react-scripts start",
+    "build": "npm run stylelint-build && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "stylelint-dev": "stylelint 'src/**/*.scss' --cache --cache-location './.stylelintcache'; exit 0",
+    "stylelint-build": "stylelint 'src/**/*.scss'",
+    "watch-styles-sass": "npm-watch"
   },
   "eslintConfig": {
     "extends": "react-app"
