--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--Logs-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
         <!--Tests-->
         <dependency>
             <groupId>junit</groupId>
@@ -152,7 +159,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
             </plugin>
 
             <plugin>
