--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.3",
     "npm-watch": "^0.3.0",
-    "react": "^16.5.2",
-    "react-redux": "^5.0.7",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
+    "react-scripts": "2.0.4",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4",
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-order": "^0.7.0"
