--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "npm-run-all": "^4.1.3",
     "npm-watch": "^0.3.0",
     "react": "^16.6.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
