--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "npm-run-all": "^4.1.3",
     "npm-watch": "^0.3.0",
     "react": "^16.6.0",
+    "react-beautiful-dnd": "^10.0.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-emotion": "^9.2.12",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
@@ -25,6 +27,7 @@
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.1",
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-order": "^0.7.0"
